--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,7 @@
-DATABASE_URL=postgresql://077bct100.pradeep:3rKB2pxmczFQ@ep-snowy-brook-42557695.ap-southeast-1.aws.neon.tech/sqldb?sslmode=require
+# Do not expose your Neon credentials to the browser
+
+PGHOST='ep-snowy-brook-42557695.ap-southeast-1.aws.neon.tech'
+PGDATABASE='sqldb'
+PGUSER='077bct100.pradeep'
+PGPASSWORD='3rKB2pxmczFQ'
+ENDPOINT_ID='ep-snowy-brook-42557695'
